<resources>
    <string name="app_name">Instant Mudra</string>
    <string name="sendotp_key">256032ACgwQJWWBewM5c3723a1</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="youAreNotUpdatedMessage">A new version of Instant Mudra is available. Please update your application.</string>
    <string name="youAreNotUpdatedMessage1">&#160;now</string>
    <string name="update">Update</string>
    <string name="youAreNotUpdatedTitle">Update Available</string>
    <string name="facebook_app_id">510434699713745</string>
    <string name="fb_login_protocol_scheme">fb510434699713745</string>
    <string name="ACCOUNT_KIT_CLIENT_TOKEN">[ACCOUNT_KIT_CLIENT_TOKEN]</string>
    <string name="twitter_consumer_key">ufGg2ofQPuS16EhP9O7zOrI1n</string>
    <string name="twitter_consumer_secret">ivaKvMRjqqeSVVf3SV5X94D1nep2gFXj6irTOTvAYCA3H5qXHC</string>
    <string name="tv_enterPhoneNo">Enter Phone No</string>
    <string name="bt_submitPhoneNo">Submit</string>
    <string name="bt_apply">Apply for loan</string>
    <string name="tv_VerifyOtpText">Enter OTP to verify your phone number</string>
    <string name="bt_SubmitOtp">Submit</string>
    <string name="edittext_hint"><font size="25">Mobile Number</font></string>
    <string name="customer_care"> <i>SKIP</i>.</string>
    <string name="next">NEXT</string>
    <string name="skip"> <u>SKIP</u>.</string>
    <string name="start">GOT IT</string>
    <string name="email_not_valid">Email address is not valid</string>
    <string name="pancard_not_valid">Pan card number is not valid</string>
    <string name="err_msg_fname">Enter your First name</string>
    <string name="err_msg_lname">Enter your Last name</string>
    <string name="err_msg_email">Enter your official Email</string>
    <string name="hint_fName"><![CDATA[First Name <font color=\'#cc0029\'>*</font>]]></string>
    <string name="hint_lName"><![CDATA[First Name <font color=\'#cc0029\'>*</font>]]></string>
    <string name="hint_email"><![CDATA[Official Email <font color=\'#cc0029\'>*</font>]]></string>
    <string name="skip_profile"><u>SKIP</u></string>
    <string name="slide_1_title">LESS INTEREST RATE</string>
    <string name="slide_1_desc">Less interest to repay the loan !</string>
    <string name="slide_2_title">GREAT DISCOUNTS</string>
    <string name="slide_2_desc">Best discounts on every single service we offer !</string>
    <string name="slide_3_title">EASIEST WAY TO GET LOAN</string>
    <string name="slide_3_desc">Very easy to get loan with just few clicks !</string>
    <string name="slide_4_title">INSTANT LOAN</string>
    <string name="slide_4_desc">The easiest way to get a loan from your phone with very basic formality </string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_online_payment">Loan Easy</string>
    <string name="upload_bank_statement">Attach latest 6 month bank statement\n ( pdf Only )</string>
    <string name="upload_salary_slip1">Attach salary slip1</string>
    <string name="upload_salary_slip2">Attach salary slip2</string>
    <string name="upload_salary_slip3">Attach salary slip3</string>
    <string name="terms_amp_conditions"><![CDATA[I accept terms & conditions !]]></string>
    <string name="verify_number">Verify number</string>
    <string name="verify_email">Verify email</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="employment_details">Employment Details</string>
    <string name="enter_aadhar">Enter Aadhar Card No</string>
    <string name="slip_1">Salary slip 1\n (pdf Only)</string>
    <string name="slip_2">Salary slip 2\n (pdf Only)</string>
    <string name="slip_3">Salary slip 3\n (pdf Only)</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_account">MY PROFILE</string>
    <string name="act_loans">ACTIVE LOANS</string>
    <string name="app_loans">APPLIED LOANS</string>
    <string name="docs_req">DOCUMENTS REQUIRED</string>
    <string name="about_us">ABOUT US</string>
    <string name="terms">TERMS &amp; CONDITIONS</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">CONTACT US</string>
    <string name="log_out">LOG OUT</string>
    <string name="loan_not_allowed">Please try after clearing the current loan.</string>
    <string name="about_1">Instant mudra is a subsidiary of Chintamani finlease ltd.</string>
    <string name="about_2">Chintamani Finlease is an RBI registered non banking financial company (NBFC) operating for last 21+ years from Delhi. Our endeavor has always been to become an easy to access and reliable credit provider to various sections of the society in Delhi NCR. Since our inception year 1995, we continuously thrive towards becoming reputed NBFC through ensuring highest quality delivery and customer relations. Instant Mudra. came into existence when Late Mr. Puran Chand Jain (Ex-banker) saw a dream to create a financing firm which can provide easy and fast credit facilities to all sections of the society at the same time creating trusted relationships with its customers. Instant mudra is your friend and partner, who extend their helping hand towards you to make your dreams come true on your required time. It is a firm managed by professional and skilled manpower under the leadership of Mr. Pradeep Kumar Jain, MBA CAIIB. He is an Ex banker with 25 years of rich experience in Nationalized banks.</string>
    <string name="about_3">We as a company belief in transparency and help customers about the credit policy, CIBIL etc. and help them to manage their finances properly. CIBIL score is very important for anybody now days, but only few people understand. CIBIL score not only affect your ability to get favourable loans &amp; the best interest rates, but it also helps you in getting new approved for a new cell phone plan and help you get lesser insurance premiums.</string>
    <string name="tc_1">Instant Mudra., has their registered office at G-73, 2nd Floor, Main vikas marg Laxmi Nagar, Near walia nursing home, Delhi-110092, and is the owner of the website, www.instantmudra.com &amp; Android app InstantMudra. As a user (“User”) of this Site, the User understands that Instant Mudra. is an online platform providing access between multiple Users in the form of lenders, borrowers, service providers etc. with a view to facilitate lending and borrowing activities between the Users. </string>
    <string name="tc_2">Your use of this Android App implies that you have read, understood and agreed to abide by following, disclaimer, terms &amp; conditions. These Terms &amp; Conditions together with our privacy policy as provided on the Website govern your usage of the Website. If you disagree with any part of these terms and conditions, please do not use the our android app.  </string>
    <string name="policy1">1.  No charges, If the applicant request for cancellation of the sanction before disbursement of the loan.</string>
    <string name="policy2">2.  After disbursement of loan processing charges will not be refund.</string>
    <string name="policy3">3.  Pre-payment charges @4 % will be charged on the outstanding principle amount.</string>
    <string name="policy4">4.  After disbursement, full amount of the EMI will be taken as principle amount and future interest will be reduced from the principle amount for closing of the loan amount.</string>
    <string name="qa_q1">Q : WHY I NEED A NON BANKING FINANCE COMPANY LIKE Instant Mudra?</string>
    <string name="qa_a1">Answer: You need Instant Mudra:\n\n

•	Instant Mudra you a loan as per your need. Compare to others, who will issue a minimum loan of 1 lakh rupees whereas you need only   Rs. 35000 to address a current problem. Therefore, excess amount becomes a burden/ a debt for a long period of time.\n
•	Instant Mudra provides loan for only one year compare to 3-6 years in case of another company. By this tenure, your principal   and interest everything   end up quickly. No hidden cost involved.\n
•	Availability of easy foreclosure and Topup services with no extra charges. No extra time consuming procedure or documentation for these services.</string>
    <string name="qa_q3">Q : WHAT ALL DOCUMENTS ARE REQUIRED BEFORE LOAN DISBURSEMENT?</string>
    <string name="qa_a3">Answer: please check documents required section.</string>
    <string name="qa_q4">Q : HOW DOES Instant Mudra MEASURE MY CREDIT WORTHINESS AND HOW LONG DOES THIS TAKE?</string>
    <string name="qa_a4">Answer: Each customer applies on theInstant Mudra app will need to go through background verification and the internal credit assessment process. The assessment is based on information collected from various data sources like the application form, credit bureaus, bank statements, pay slips, verification reports, social media, etc. The above process is time bound and fully automated therefore within 2–3 days your loan amount will be disbursed based on approvals.</string>
    <string name="qa_q5">Q : DOESInstant Mudra HAVE ANY INTERNAL CREDIT RATING?</string>
    <string name="qa_a5">Answer: Yes, the company follows a robust procedure. This is determined by CIBIL score, banking history and other important factors like distance from our office, the status of current residence, job type, current income, etc.</string>
    <string name="qa_q6">Q : CAN I REPAY MY LOAN EARLY?</string>
    <string name="qa_a6">Answer: Yes, you can foreclose your remaining loan amount anytime without any closure charges.</string>
    <string name="qa_q7">Q : CAN I TAKE TOPUP AGAINST MY PREVIOUS LOAN?</string>
    <string name="qa_a8">Answer: The reason behind any application rejection is mainly due to the customer’s current credit profile.</string>
    <string name="qa_q9">Q : WHAT IS MY REPAYMENT SCHEDULE?</string>
    <string name="qa_a9">Answer: Repayment of the loan will happen monthly on an EMI (equated monthly instalment) basis where the amount will be calculated based on amortizing balance. One or two of the instalments might be different which will depend on the timing of the loan.</string>
    <string name="qa_q10">Q: WHAT HAPPENS IN THE CASE OF A MISSED PAYMENT OR NON-PAYMENT BY A BORROWER?</string>
    <string name="qa_a10">Answer: If the monthly payment of any EMI is delayed for any reason, a penalty fee and penal interest might be charged by the company. Chintamani suggests all our customer’s not to default in their payment. We planned to create many loyalty programs for our old customers who avoided any defaults or cheque bounce in their past. This is because, the borrowers credit file get impacted which will restrict him / her to get any other credit in the future from any financial institution. The company in an extreme situation is eligible to take any legal action against non payment of the loan amount.</string>
    <string name="qa_q11">Q: HOW CAN I MAKE MONTHLY PAYMENTS?</string>
    <string name="qa_a11">Answer: You can pay your EMIs using post dated cheques (PDC), online payment or visit Instant Mudra office and pay by cash.</string>
    <string name="qa_q12">Q: HOW WILL YOU DISBURSE THE LOAN AMOUNT?</string>
    <string name="qa_a12">Answer: The Company disburse a cheque issued on customer name soon after the loan approval.</string>
</resources>