<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dimen_12dp"
        android:elevation="@dimen/dimen_4dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_20dp"
                    android:text="@string/qa_q1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp" />

                <customfonts.TextView_Roboto_regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:text="@string/qa_a1"
                    android:textColor="@color/gray_800"
                    android:textSize="@dimen/dimen_14sp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/qa_q3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp" />

                <customfonts.TextView_Roboto_regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:text="@string/qa_a3"
                    android:textColor="@color/gray_800"
                    android:textSize="@dimen/dimen_14sp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/qa_q4"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp" />

                <customfonts.TextView_Roboto_regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:text="@string/qa_a4"
                    android:textColor="@color/gray_800"
                    android:textSize="@dimen/dimen_14sp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/qa_q5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp" />

                <customfonts.TextView_Roboto_regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:text="@string/qa_a5"
                    android:textColor="@color/gray_800"
                    android:textSize="@dimen/dimen_14sp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/qa_q6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp" />

                <customfonts.TextView_Roboto_regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:text="@string/qa_a6"
                    android:textColor="@color/gray_800"
                    android:textSize="@dimen/dimen_14sp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/qa_q7"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp" />

                <customfonts.TextView_Roboto_regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:text="@string/qa_a1"
                    android:textColor="@color/gray_800"
                    android:textSize="@dimen/dimen_14sp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/qa_q7"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp" />

                <customfonts.TextView_Roboto_regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:text="@string/qa_a8"
                    android:textColor="@color/gray_800"
                    android:textSize="@dimen/dimen_14sp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/qa_q1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp" />

                <customfonts.TextView_Roboto_regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:text="@string/qa_a8"
                    android:textColor="@color/gray_800"
                    android:textSize="@dimen/dimen_14sp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/qa_q9"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp" />

                <customfonts.TextView_Roboto_regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:text="@string/qa_a9"
                    android:textColor="@color/gray_800"
                    android:textSize="@dimen/dimen_14sp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/qa_q10"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp" />

                <customfonts.TextView_Roboto_regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:text="@string/qa_a10"
                    android:textColor="@color/gray_800"
                    android:textSize="@dimen/dimen_14sp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/qa_q11"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp" />

                <customfonts.TextView_Roboto_regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:text="@string/qa_a11"
                    android:textColor="@color/gray_800"
                    android:textSize="@dimen/dimen_14sp" />

                <customfonts.MyTextView_Roboto_Medium
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_10dp"
                    android:text="@string/qa_q12"
                    android:textColor="@color/black"
                    android:textSize="@dimen/dimen_16sp" />

                <customfonts.TextView_Roboto_regular
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dimen_20dp"
                    android:layout_marginLeft="@dimen/dimen_8dp"
                    android:layout_marginRight="@dimen/dimen_5dp"
                    android:layout_marginTop="@dimen/dimen_5dp"
                    android:text="@string/qa_a12"
                    android:textColor="@color/gray_800"
                    android:textSize="@dimen/dimen_14sp" />
            </LinearLayout>
        </ScrollView>
    </androidx.cardview.widget.CardView>

</LinearLayout>